[gd_scene load_steps=3 format=3 uid="uid://dry4s2u5ugig0"]

[ext_resource type="Script" uid="uid://yikutnoygm3e" path="res://Scripts/MainMenu.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dfj2xpw34fwmr" path="res://Assets/background12.png" id="2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "Hero Adventure"
horizontal_alignment = 1

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CreateButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Create New Hero"

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Play"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Load Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
text = "Quit"

[node name="CreateDialog" type="Window" parent="."]
title = "Create New Hero"
initial_position = 2
size = Vector2i(400, 200)
visible = false

[node name="CenterContainer" type="CenterContainer" parent="CreateDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreateDialog/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameLabel" type="Label" parent="CreateDialog/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Enter Hero Name:"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="CreateDialog/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Hero Name"
alignment = 1

[node name="CreateConfirmButton" type="Button" parent="CreateDialog/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Create"
